// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authorized component should display child element for undefined prop forRole 1`] = `
<Authorized
  userroles={
    Array [
      "PR_CST_Leiter",
      "PR_Mitarbeiter",
    ]
  }
>
  <div>
    visible
  </div>
</Authorized>
`;

exports[`Authorized component should display child element if user has according role 1`] = `
<Authorized
  forRole="PR_CST_Leiter"
  userroles={
    Array [
      "PR_CST_Leiter",
      "PR_Mitarbeiter",
    ]
  }
>
  <div>
    visible
  </div>
</Authorized>
`;

exports[`Authorized component should not display child element if user does not have the group 1`] = `
<Authorized
  forRole="UNKNOWN"
  userroles={
    Array [
      "PR_CST_Leiter",
      "PR_Mitarbeiter",
    ]
  }
/>
`;
